@@ -9,6 +9,7 @@ Release 4.21
 	- added --skip-untagged option to hxlcut script
 	- improved docstrings for hxl.io, hxl.datatypes, hxl.converters, and hxl.geo modules
 	- added hxlspec command-line script to process a HXL JSON spec
+	- added URL munging for HXL Proxy links (non-CSV/JSON)
 
 2020-05-20 Release 4.20
 	- switch to jsonpath-ng library to support more JSONPath features
